--- a/Resources/Private/Backend/Partials/Order/Show/Summary.html
+++ b/Resources/Private/Backend/Partials/Order/Show/Summary.html
@@ -67,24 +67,24 @@
     </f:for>
 </tr>
 
-<f:if condition="{orderItem.coupons}">
-    <f:for each="{orderItem.coupons}" as="orderCoupon">
+<f:if condition="{orderItem.discounts}">
+    <f:for each="{orderItem.discounts}" as="orderDiscount">
         <tr style="border-top: 1px solid #000000;">
             <td colspan="5">
-                <f:translate key="tx_cart_domain_model_order_coupon"/>
-                {orderCoupon.title}
+                <f:translate key="tx_cart_domain_model_order_discount"/>
+                {orderDiscount.title}
             </td>
             <td>
-                ---
+                <cart:format.currency>{orderDiscount.net}</cart:format.currency>
             </td>
             <td>
-                <cart:format.currency>{orderCoupon.discount}</cart:format.currency>
+                <cart:format.currency>{orderDiscount.gross}</cart:format.currency>
             </td>
             <f:for each="{orderItem.orderTotalTax}" as="orderTotalTax">
                 <td>
-                    <f:if condition="{0: orderTotalTax.orderTaxClass.id} == {0: orderCoupon.orderTaxClass.id}">
+                    <f:if condition="{0: orderTotalTax.orderTaxClass.id} == {0: orderDiscount.orderTaxClass.id}">
                         <f:then>
-                            <cart:format.currency>{orderCoupon.orderTax.tax}</cart:format.currency>
+                            <cart:format.currency>{orderDiscount.orderTax.tax}</cart:format.currency>
                         </f:then>
                         <f:else>
                             <!-- -->
